* Sort out diffs between this and the Maven version