@@ -27,9 +27,7 @@ import org.onvif.ver20.ptz.wsdl.PtzService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.ConnectException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
@@ -51,6 +49,7 @@ public class OnvifDevice {
   private PTZ ptz;
   private ImagingPort imaging;
   private EventPortType events;
+  public final EventService eventService = new EventService();
 
   private static boolean verbose = false; // enable/disable logging of SOAP messages
   final SimpleSecurityHandler securityHandler;
@@ -61,8 +60,8 @@ public class OnvifDevice {
     if (!f.isEmpty()) {
       String out = u.toString().replace(f, "");
       try {
-        return new URL(out);
-      } catch (MalformedURLException e) {
+        return new URI(out).toURL();
+      } catch (MalformedURLException | URISyntaxException e) {
         throw new ConnectException("MalformedURLException " + u);
       }
     }
@@ -92,9 +91,9 @@ public class OnvifDevice {
    * @throws SOAPException
    */
   public OnvifDevice(String deviceIp, String user, String password)
-      throws ConnectException, SOAPException, MalformedURLException {
+          throws ConnectException, SOAPException, MalformedURLException, URISyntaxException {
     this(
-        deviceIp.startsWith("http") ? new URL(deviceIp) : new URL("http://" + deviceIp),
+        deviceIp.startsWith("http") ? new URI(deviceIp).toURL() : new URI("http://" + deviceIp).toURL(),
         user,
         password);
   }
@@ -108,7 +107,7 @@ public class OnvifDevice {
    *     doesn't answer to SOAP messages
    * @throws SOAPException
    */
-  public OnvifDevice(String hostIp) throws ConnectException, SOAPException, MalformedURLException {
+  public OnvifDevice(String hostIp) throws ConnectException, SOAPException, MalformedURLException, URISyntaxException {
     this(hostIp, null, null);
   }
 
@@ -156,7 +155,7 @@ public class OnvifDevice {
     }
 
     if (capabilities.getEvents() != null && capabilities.getEvents().getXAddr() != null) {
-      this.events = new EventService().getEventPort();
+      this.events = eventService.getEventPort();
       this.events =
           getServiceProxy((BindingProvider) events, capabilities.getEvents().getXAddr())
               .create(EventPortType.class);
@@ -200,7 +199,7 @@ public class OnvifDevice {
     boolean daylightSavings = calendar.getTimeZone().inDaylightTime(currentDate);
     org.onvif.ver10.schema.TimeZone timeZone = new org.onvif.ver10.schema.TimeZone();
     timeZone.setTZ(displayTimeZone(calendar.getTimeZone()));
-    org.onvif.ver10.schema.Time time = new org.onvif.ver10.schema.Time();
+    Time time = new Time();
     time.setHour(calendar.get(Calendar.HOUR_OF_DAY));
     time.setMinute(calendar.get(Calendar.MINUTE));
     time.setSecond(calendar.get(Calendar.SECOND));
@@ -222,7 +221,7 @@ public class OnvifDevice {
     // avoid -4:-30 issue
     minutes = Math.abs(minutes);
 
-    String result = "";
+    String result;
     if (hours > 0) {
       result = String.format("GMT+%02d:%02d", hours, minutes);
     } else {
